--- a/styles/styles.css
+++ b/styles/styles.css
@@ -471,6 +471,78 @@ button:hover {
     opacity: 0;
 }
 
+.difficultySelector {
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0 0 0 / 0.5);
+    /* border-radius: 20px; */
+    display: none;
+}
+
+.popup {
+    position: absolute;
+    inset: 0 0 0 0;
+    margin: auto;
+    width: 500px;
+    height: auto;
+    max-height: 60%;
+    padding: 20px;
+    background-color: #2e3440;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.instruction {
+    width: 100%;
+    font-size: 24px;
+    text-align: left;
+
+    padding: 10px;
+}
+
+.listWrapper {
+    position: relative;
+
+    width: 100%;
+    /* height: 300px; */
+    /* min-height: min-content; */
+    flex: 1;
+    overflow: auto;
+}
+
+.difficultyList {
+    position: relative;
+
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+
+.diff {
+    position: relative;
+    width: 100%;
+
+    padding: 20px;
+
+    background-color: #3b4252;
+    border-radius: 10px;
+
+    box-sizing: border-box;
+    user-select: none;
+}
+
+.diff:hover {
+    background-color: #171a1f;
+}
+
 .loading circle {
     fill: none;
     stroke: white;
