--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,9 +103,22 @@ body {
     box-sizing: border-box;
 }
 
+.legacyPart {
+    position: relative;
+    flex: 1;
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+
+    box-sizing: border-box;
+}
+
 #inputWrapper {
     position: relative;
-    width: 300px;
+    /* width: 300px; */
+    flex: 1;
     height: 40px;
 }
 
@@ -182,6 +195,92 @@ body {
 #inputContainer button:nth-child(3):hover {
     filter: none;
     background-color: #4c566a;
+}
+
+#settingsButton {
+    position: relative;
+
+    width: 40px;
+    height: 40px;
+
+    margin-right: auto;
+
+    background-image: url(../static/settings.png);
+    background-size: 90%;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    transition: ease-in-out 50ms;
+}
+
+svg {
+    display: none;
+}
+
+.utilRow {
+    display: flex;
+    gap: 10px;
+}
+
+#map-dropper {
+    position: relative;
+    color: transparent;
+    aspect-ratio: 1 / 1;
+    height: 40px;
+    border-radius: 10px;
+
+    transition: ease-in-out 200ms;
+    background-color: #3b4252;
+}
+#map-dropper::-webkit-file-upload-button {
+    visibility: hidden;
+}
+#map-dropper::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    background-image: url(../static/upload.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    padding: 5px;
+    -webkit-user-select: none;
+    cursor: pointer;
+
+    box-sizing: border-box;
+}
+#map-dropper:hover {
+    background-color: #4c566a;
+}
+#map-dropper:active {
+    outline: 0;
+}
+
+#choose-diff {
+    /* width: 80px; */
+    height: 40px;
+
+    background-color: #3b4252;
+
+    font-family: Torus;
+    font-weight: 500;
+    color: white;
+
+    border-radius: 10px;
+    transition: ease-in-out 200ms;
+
+    padding-inline: 20px;
+}
+
+#choose-diff:hover {
+    filter: none;
+    background-color: #4c566a;
+}
+
+#choose-diff:disabled {
+    opacity: 0.5;
 }
 
 #playerWrapper {
@@ -304,26 +403,6 @@ canvas {
     background-color: #d8dee9;
     color: black;
     border-radius: 100px;
-}
-
-#settingsButton {
-    position: relative;
-
-    width: 40px;
-    height: 40px;
-
-    margin-right: auto;
-
-    background-image: url(../static/settings.png);
-    background-size: 90%;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    transition: ease-in-out 50ms;
-}
-
-svg {
-    display: none;
 }
 
 #playerController {
@@ -953,7 +1032,21 @@ input[type="checkbox"]:checked {
         width: 100%;
         padding: 20px;
         margin: 0;
-        gap: 5px;
+        gap: 10px;
+
+        flex-direction: column;
+    }
+
+    .legacyPart {
+        width: 100%;
+    }
+
+    .utilRow {
+        width: 100%;
+    }
+
+    #choose-diff {
+        flex: 1;
     }
 
     #inputContainer input[type="text"] {
@@ -1015,7 +1108,7 @@ input[type="checkbox"]:checked {
 
     #artistTitle,
     #versionCreator {
-        padding: 0 20px;
+        /* padding: 0 20px; */
     }
 
     #playerController {
