--- a/styles/styles.css
+++ b/styles/styles.css
@@ -415,6 +415,70 @@ canvas {
     border-radius: 100px;
 }
 
+.thePlayer {
+    position: absolute;
+    bottom: 60px;
+    left: 0;
+
+    width: 200px;
+    margin: 20px;
+
+    display: flex;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+
+    padding: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+
+    display: none;
+
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.blackCover {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: black;
+    opacity: .5;
+}
+
+.thePlayer img {
+    position: relative;
+    width: 40px;
+    height: 40px;
+
+    border-radius: 10px;
+}
+
+.playerInfo {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.thePlayer .label {
+    position: relative;
+    font-weight: 300;
+    font-size: 12px;
+    text-shadow: 0 2px 2px black;
+}
+
+.playerName {
+    position: relative;
+    font-weight: 500;
+    text-shadow: 0 2px 2px black;
+}
+
 #playerController {
     box-sizing: border-box;
     position: relative;
@@ -1158,6 +1222,15 @@ input[type="checkbox"]:disabled:hover {
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+
+    .thePlayer {
+        position: relative;
+        margin: unset;
+        inset: unset;
+
+        width: 100%;
+        border-radius: unset;
     }
 
     #playerController {
