--- a/styles/styles.css
+++ b/styles/styles.css
@@ -461,9 +461,11 @@ canvas {
 
 .playerInfo {
     position: relative;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 5px;
 }
 
 .thePlayer .label {
@@ -471,6 +473,7 @@ canvas {
     font-weight: 300;
     font-size: 12px;
     text-shadow: 0 2px 2px black;
+    line-height: .7em;
 }
 
 .playerName {
