--- a/styles/styles.css
+++ b/styles/styles.css
@@ -913,7 +913,11 @@ button:hover {
 
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
+}
+
+.list.skin {
+    gap: 20px;
 }
 
 .selection {
@@ -1089,7 +1093,7 @@ input[type="checkbox"]:disabled:hover {
     display: flex;
     align-items: center;
     gap: 20px;
-    /* padding: 5px 0; */
+    padding: 5px 0;
     opacity: 0.5;
     font-weight: 400;
     transition: ease-in-out 100ms;
