--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@
 
 body {
     width: 100vw;
-    height: 100dvh;
+    min-height: 100dvh;
     box-sizing: border-box;
     padding: 20px;
     margin: 0;
@@ -55,12 +55,16 @@ body {
     justify-content: center;
     align-content: center;
     /* flex-wrap: wrap; */
+
     background-color: var(--primary-2);
     font-family: Torus;
     font-weight: 500;
     color: white;
+    font-size: 16px;
+
     overflow-y: overlay;
     overflow-x: hidden;
+
     box-sizing: border-box;
 }
 
@@ -346,7 +350,6 @@ svg {
     width: 100%;
     /* height: 100%; */
     flex: 1;
-
     display: flex;
     flex-direction: column;
 }
@@ -414,7 +417,7 @@ canvas {
 
 #artistTitle {
     /* width: 100%; */
-    font-size: 1.5em;
+    font-size: 1.2rem;
     font-weight: 600;
 }
 
@@ -440,7 +443,7 @@ canvas {
     padding: 10px;
     border-radius: 30px;
 
-    font-size: 14px;
+    font-size: 0.7rem;
     font-weight: 300;
 }
 
@@ -568,12 +571,9 @@ canvas {
 #timeContainer {
     position: relative;
     display: flex;
-
     padding: 10px 20px;
     align-items: center;
-
     font-size: 0.7em;
-
     background-color: var(--primary-5);
 }
 
@@ -787,7 +787,7 @@ button:hover {
 
 .instruction {
     width: 100%;
-    font-size: 24px;
+    font-size: 1rem;
     text-align: left;
 
     padding: 10px;
@@ -877,11 +877,11 @@ button:hover {
 }
 
 .diffName {
-    font-size: 18px;
+    font-size: 1rem;
 }
 
 .starRating {
-    font-size: 12px;
+    font-size: 0.8rem;
     font-weight: 300;
 }
 
@@ -1252,7 +1252,7 @@ a:visited {
     font-family: Torus;
     color: white;
     text-align: left;
-    font-size: 14px;
+    font-size: 0.8rem;
 
     background-color: var(--primary-2);
 }
@@ -1278,7 +1278,7 @@ a:visited {
     opacity: 100%;
 
     color: white;
-    font-size: 14px;
+    font-size: 0.rem;
 
     z-index: 1;
 
@@ -1300,7 +1300,7 @@ a:visited {
     font-family: Torus;
     color: white;
     text-align: left;
-    font-size: 14px;
+    font-size: 0.8rem;
 }
 
 .skinName:hover {
@@ -1329,332 +1329,4 @@ a:visited {
     box-sizing: border-box;
 }
 
-@media screen and (max-aspect-ratio: 1 / 1) {
-    body {
-        width: 100dvw;
-        height: 100dvh;
-        padding: 0;
-        margin: 0;
-        /* flex-direction: row; */
-        /* flex-wrap: wrap; */
-        align-content: flex-start;
-        overflow: hidden;
-        gap: 0;
-        /* background-size: 0; */
-    }
 
-    #main {
-        /* background-color: transparent; */
-        /* backdrop-filter: none; */
-        overflow: hidden;
-    }
-
-    .timelineContainer {
-        height: 40px;
-        width: calc(100% - 20px);
-        margin-inline: 10px;
-    }
-
-    .zoom {
-        padding: 0;
-        justify-content: center;
-
-        display: none;
-    }
-
-    .zoom img {
-        width: 10px;
-        height: 10px;
-    }
-
-    #inputContainer {
-        width: 100%;
-        padding: 20px;
-        margin: 0;
-        gap: 10px;
-
-        flex-direction: column;
-    }
-
-    .legacyPart {
-        width: 100%;
-    }
-
-    .utilRow {
-        width: 100%;
-    }
-
-    #choose-diff {
-        flex: 1;
-    }
-
-    #inputContainer input[type="text"] {
-        /* background-color: rgb(0 0 0 /0.5); */
-        border-radius: 5px;
-    }
-
-    #inputContainer button:nth-child(3),
-    #inputContainer button:nth-child(4) {
-        background-color: var(--primary-3);
-        border-radius: 5px;
-    }
-
-    #settingsButton {
-        background-size: contain;
-        height: 30px;
-    }
-
-    #playerWrapper {
-        height: 100%;
-    }
-
-    #playerContainer {
-        flex: 1;
-        /* aspect-ratio: 16 / 9; */
-        /* width: 100%; */
-        height: 100%;
-        border-radius: 0;
-        /* margin-bottom: 120px; */
-    }
-
-    #overlay,
-    #background {
-        border-radius: 0;
-    }
-
-    .stats {
-        position: relative;
-        inset: unset;
-
-        width: 100%;
-        margin: 0;
-        border-radius: 0;
-        justify-content: center;
-    }
-
-    #metadata {
-        position: relative;
-        /* top: 100%; */
-
-        width: 100%;
-        /* height: 120px; */
-        padding: 20px;
-
-        background-color: var(--primary-2);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .thePlayer {
-        position: relative;
-        margin: unset;
-        inset: unset;
-
-        width: 100%;
-        border-radius: unset;
-    }
-
-    .modsList {
-        margin-left: auto;
-    }
-
-    #playerController {
-        position: relative;
-        width: 100%;
-        height: auto;
-        /* height: 100%; */
-        /* bottom: 0; */
-        border-radius: 0 0 0 0;
-
-        flex-wrap: wrap;
-        align-content: flex-start;
-        justify-content: center;
-
-        background-color: rgba(0 0 0 / 0.5);
-    }
-
-    #settingsPanel {
-        font-size: 3vw;
-    }
-
-    .section {
-        padding: 30px;
-    }
-
-    #timeContainer {
-        background-color: rgba(0 0 0 / 0.5);
-        width: 100%;
-        padding: 20px;
-        margin-bottom: 20px;
-
-        justify-content: center;
-    }
-
-    #playButton,
-    #prevButton,
-    #nextButton {
-        /* width: 100%; */
-        height: 30px;
-        margin: 0;
-
-        padding: 0;
-    }
-
-    #playButton:focus {
-        outline: none;
-    }
-
-    #playButton:hover {
-        filter: none;
-    }
-
-    #progress {
-        width: 100%;
-        padding: 20px;
-    }
-
-    #volumeSlider {
-        display: none;
-    }
-
-    #playerController input[type="range"]::-webkit-slider-runnable-track {
-        background: var(--primary-5);
-        height: 4px;
-
-        margin: 10px;
-        border-radius: 20px;
-    }
-
-    #playerController input[type="range"]::-webkit-slider-thumb {
-        appearance: none;
-
-        width: 10px;
-        height: 10px;
-
-        background: white;
-        border-radius: 20px;
-
-        margin-top: -3px;
-
-        transition: cubic-bezier(0.03, 0.16, 0.29, 1.45) 100ms;
-        transform-origin: center;
-    }
-
-    #playerController input[type="range"]::-webkit-slider-thumb:hover {
-        box-shadow: 0 0 5px 0px white;
-        filter: brightness(1.2);
-    }
-}
-
-@media screen and (max-aspect-ratio: 9 / 16) {
-    #inputContainer input::placeholder {
-        font-size: 0.7rem;
-    }
-
-    #metadata {
-        font-size: 3vw;
-    }
-
-    .stats {
-        inset: unset;
-        left: 0;
-        right: 0;
-        gap: 0;
-        /* bottom: -160px; */
-        justify-content: space-between;
-        /* position: fixed; */
-    }
-
-    #playerContainer {
-        /* flex: 0; */
-        flex: unset;
-        aspect-ratio: 4 / 3;
-        height: auto;
-        border-radius: 0;
-        margin-bottom: 0px;
-    }
-}
-
-@media screen and (min-aspect-ratio: 16 / 9) and (max-width: 915px) {
-    body {
-        padding: 0;
-    }
-
-    #inputContainer {
-        padding: 10px;
-        margin: 0;
-        background-color: rgb(0 0 0 /0.5);
-    }
-
-    #settingsButton {
-        margin-right: auto;
-    }
-
-    #inputContainer input[type="text"] {
-        width: 100%;
-        border-radius: 5px;
-
-        /* background-color: rgb(0 0 0 /0.5); */
-    }
-
-    #inputContainer button:nth-child(3),
-    #inputContainer button:nth-child(4) {
-        border-radius: 5px;
-        background-color: rgb(0 0 0 /0.5);
-    }
-
-    #playerContainer {
-        /* padding-top: 50px; */
-        border-radius: 0;
-    }
-
-    #overlay {
-        top: 0;
-        /* padding-top: 50px; */
-        border-radius: 0;
-    }
-
-    #metadata {
-        top: 0;
-
-        padding: 0 10px;
-
-        height: 50px;
-        font-size: 1vw;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    .stats {
-        font-size: 1vw;
-    }
-
-    #playerController {
-        border-radius: 0;
-        background-color: rgb(0 0 0 /0.5);
-    }
-
-    #timeContainer {
-        background-color: rgb(0 0 0 /0.5);
-    }
-
-    #playerController button {
-        margin: 12px 0;
-    }
-
-    #playerController button:hover {
-        filter: none;
-    }
-}
-
-/* @media screen and (max-width: 1024px) {
-} */
-
-@media screen and (min-width: 1024px) {
-    #inputWrapper {
-        width: 500px;
-    }
-}
