--- a/styles/styles.css
+++ b/styles/styles.css
@@ -288,6 +288,7 @@ svg {
     position: relative;
     color: transparent;
     aspect-ratio: 1 / 1;
+    width: 40px;
     height: 40px;
     border-radius: 10px;
 
