Move timing points position to bottom on mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -207,6 +207,11 @@
         padding: 20px;
     }
 
+    .timingPointsContainer {
+        top: unset;
+        bottom: 0;
+    }
+
     .timingPointsContainer img {
         padding: 0 30px;
     }
