--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -188,6 +188,7 @@
     #prevButton,
     #nextButton {
         /* width: 100%; */
+        width: 60px;
         height: 30px;
         margin: 0;
 
