--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,7 +110,7 @@ body {
     width: 100%;
     height: 60px;
 
-    background: rgba(0 0 0 / .5);
+    background: rgba(0 0 0 / 0.5);
     border-radius: 10px;
 
     margin-bottom: 10px;
@@ -569,6 +569,107 @@ canvas {
     overflow: hidden;
 }
 
+@keyframes popup {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    100% {
+        transform: unset;
+        opacity: 1;
+    }
+}
+
+@keyframes popout {
+    0% {
+        display: flex;
+        transform: unset;
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(0);
+        opacity: 0;
+    }
+}
+
+.seekTo {
+    position: absolute;
+    bottom: 60px;
+    left: 0;
+
+    border: none;
+
+    background-color: var(--primary-5);
+    color: white;
+
+    border-radius: 10px;
+
+    width: 300px;
+
+    /* display: flex; */
+    flex-direction: column;
+    gap: 10px;
+
+    margin: 10px;
+    transform-origin: bottom left;
+
+    box-shadow: 0 5px 10px 0 rgb(0 0 0 /0.5);
+}
+
+.popupAnim {
+    animation: popup cubic-bezier(0.34, 1.56, 0.64, 1) 100ms;
+    display: flex;
+}
+
+.popoutAnim {
+    animation: popout ease-in 100ms;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+.rowLabel {
+    width: 100px;
+    font-size: 0.8rem;
+}
+
+.row input[type="text"] {
+    flex: 1;
+    appearance: none;
+    box-sizing: border-box;
+
+    /* height: 40px; */
+
+    padding: 10px;
+    /* margin: 10px 0; */
+
+    font-family: Torus;
+    color: white;
+    font-size: 0.8em;
+
+    border: none;
+    background-color: rgba(0 0 0 / 0.5);
+    border-radius: 5px;
+}
+
+.row input[type="text"]:focus {
+    outline: solid 2px rgb(255, 187, 0);
+}
+
+#previewURL {
+    user-select: none;
+    cursor: pointer;
+}
+
+#previewURL:hover {
+    background-color: var(--primary-3);
+}
+
 #timeContainer {
     position: relative;
     display: flex;
@@ -702,7 +803,8 @@ canvas {
     height: 100%;
 }
 
-.redLine, .greenLine {
+.redLine,
+.greenLine {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -1372,7 +1474,7 @@ a:visited {
     opacity: 100%;
 
     color: white;
-    font-size: 0.rem;
+    font-size: 0rem;
 
     z-index: 1;
 
@@ -1403,7 +1505,7 @@ a:visited {
 }
 
 .deleteButton {
-    opacity: .2;
+    opacity: 0.2;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1432,7 +1534,7 @@ a:visited {
 
     100% {
         opacity: 1;
-        transform: unset; 
+        transform: unset;
     }
 }
 
@@ -1465,7 +1567,6 @@ a:visited {
     /* display: flex; */
     align-items: center;
     gap: 20px;
-
 }
 
 .animationIn {
