Initial timing panel draft

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -92,6 +92,7 @@
         border-radius: 0;
         /* margin-bottom: 120px; */
         aspect-ratio: 4 / 3;
+        flex: unset;
     }
 
     #overlay,
