--- a/styles/sidePanel.css
+++ b/styles/sidePanel.css
@@ -210,3 +210,58 @@
 .metadataRow .value {
     font-size: 1rem;
 }
+
+@media screen and (max-aspect-ratio: 1 / 1) {
+    @keyframes slideOut {
+        0% {
+            opacity: 0;
+            height: 0;
+        }
+    
+        100% {
+            opacity: 1;
+            height: 90%;
+            padding: 20px;
+        }
+    }
+    
+    @keyframes slideIn {
+        0% {
+            height: 90%;
+            padding: 20px;
+            opacity: 1;
+        }
+    
+        100% {
+            opacity: 0;
+            height: 0;
+            padding: 0;
+        }
+    }
+
+    .contentWrapper:has(.slideOutAnim) {
+        gap: unset;
+    }
+
+    .sidePanel {
+        position: absolute;
+        bottom: 0;
+
+        width: 100%;
+
+        border-radius: 20px 20px 0 0;
+    }
+
+    .sidePanel.slideOutAnim {
+        width: 100%;
+        height: 90%;
+    }
+
+    .panel {
+        font-size: 1rem;
+    }
+
+    .timingContent :nth-of-type(2) {
+        width: 60px;
+    }
+}
