Trying to reduce lags on opening side panel

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -80,8 +80,8 @@
         display: unset;
     }
 
-    #playerWrapper {
-        flex: unset;
+    .contentWrapper:has(.slideOutAnim) #playerWrapper {
+        width: 100%;
     }
 
     #playerContainer {
