--- a/styles/sidePanel.css
+++ b/styles/sidePanel.css
@@ -1,26 +1,26 @@
 @keyframes slideOut {
     0% {
         opacity: 0;
-        width: 0;
+        transform: scaleX(0);
     }
 
     100% {
         opacity: 1;
-        width: 400px;
+        transform: unset;
         padding: 20px;
     }
 }
 
 @keyframes slideIn {
     0% {
-        width: 400px;
+        transform: unset;
         padding: 20px;
         opacity: 1;
     }
 
     100% {
         opacity: 0;
-        width: 0;
+        transform: scaleX(0);
         padding: 0;
     }
 }
@@ -38,12 +38,16 @@
 }
 
 .sidePanel {
-    position: relative;
-    width: 0px;
+    position: absolute;
+    right: 0;
+
+    width: 400px;
+    height: 100%;
+
     background-color: var(--primary-3);
     border-radius: 20px;
 
-    transition: ease-in-out 200ms;
+    /* transition: ease-in-out 200ms; */
 
     display: flex;
     flex-direction: column;
@@ -53,12 +57,15 @@
 
     overflow: hidden;
     opacity: 0;
+
+    transform: scaleX(0);
+    transform-origin: center right;
 }
 
 .sidePanel.slideOutAnim {
-    width: 400px;
     opacity: 1;
     padding: 20px;
+    transform: unset;
 }
 
 .closeRow {
@@ -112,8 +119,6 @@
 .panel {
     width: 100%;
     height: 0;
-
-    min-height: 0;
 
     overflow: auto;
 
@@ -215,26 +220,26 @@
     @keyframes slideOut {
         0% {
             opacity: 0;
-            height: 0;
+            transform: scaleY(0);
         }
     
         100% {
             opacity: 1;
-            height: 90%;
+            transform: unset;
             padding: 20px;
         }
     }
     
     @keyframes slideIn {
         0% {
-            height: 90%;
+            transform: unset;
             padding: 20px;
             opacity: 1;
         }
     
         100% {
             opacity: 0;
-            height: 0;
+            transform: scaleY(0);
             padding: 0;
         }
     }
@@ -248,13 +253,16 @@
         bottom: 0;
 
         width: 100%;
+        height: 90%;
 
         border-radius: 20px 20px 0 0;
+        transform: scaleY(0);
+        transform-origin: bottom center;
     }
 
     .sidePanel.slideOutAnim {
         width: 100%;
-        height: 90%;
+        transform: unset;
     }
 
     .panel {
