--- a/styles/styles.css
+++ b/styles/styles.css
@@ -351,19 +351,24 @@ svg {
     width: 100%;
     flex: 1;
     
-    display: flex;
     /* gap: 20px; */
+
+    display: flex;
 
     transition: cubic-bezier(0, 0.4, 0, 1) 200ms;
 }
 
 #playerWrapper {
     position: relative;
-    flex: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
 
-    /* transition: ease-in-out 200ms; */
+    /* transition: cubic-bezier(0, 0.4, 0, 1) 200ms; */
+}
+
+.contentWrapper:has(.slideOutAnim) #playerWrapper {
+    width: calc(100% - 420px);
 }
 
 #playerContainer {
@@ -415,6 +420,8 @@ canvas {
     border-radius: 20px 20px 0 0;
     background-size: cover;
     background-position: center;
+
+    transition: ease-in-out 200ms;
 }
 
 #metadata {
