--- a/styles/sidePanel.css
+++ b/styles/sidePanel.css
@@ -110,6 +110,8 @@
     font-weight: 500;
     text-align: left;
     padding: 0;
+
+    margin-bottom: 5px;
 }
 
 .slideToggleButton:hover {
@@ -117,6 +119,7 @@
 }
 
 .panel {
+    position: relative;
     width: 100%;
     height: 0;
 
@@ -134,16 +137,34 @@
     flex: 1 1 0;
 }
 
+.highlightPoint {
+    position: absolute;
+
+    width: calc(100% - 5px);
+    padding: 10px 15px;
+
+    background-color: var(--primary-4);
+    border-radius: 5px;
+
+    color: transparent;
+}
+
 .timingPoint {
+    position: relative;
+
     width: 100%;
     padding: 5px 10px;
 
     font-weight: 400;
 
-    display: flex;
+    display: none;
     align-items: center;
 
     border-radius: 5px;
+}
+
+.panel.show .timingPoint {
+    display: flex;
 }
 
 .timingPoint.current {
@@ -166,6 +187,11 @@
     display: flex;
     align-items: center;
     gap: 20px;
+}
+
+.timingContent.kiai {
+    background-color: var(--accent-1);
+    color: var(--primary-3);
 }
 
 .timingPoint.current .timingContent {
@@ -222,21 +248,21 @@
             opacity: 0;
             transform: scaleY(0);
         }
-    
+
         100% {
             opacity: 1;
             transform: unset;
             padding: 20px;
         }
     }
-    
+
     @keyframes slideIn {
         0% {
             transform: unset;
             padding: 20px;
             opacity: 1;
         }
-    
+
         100% {
             opacity: 0;
             transform: scaleY(0);
@@ -270,6 +296,6 @@
     }
 
     .timingContent :nth-of-type(2) {
-        width: 60px;
+        width: 70px;
     }
 }
