Disable showing timing panel on start to reduce lags

--- a/styles/sidePanel.css
+++ b/styles/sidePanel.css
@@ -161,6 +161,8 @@
     align-items: center;
 
     border-radius: 5px;
+    /* pointer-events: none; */
+    /* user-select: none; */
 }
 
 .panel.show .timingPoint {
